commit: resolved the error in the domain section xml and created SHA 1 key fingerprint for my(Rajkamal) computer and now more 2 members have to generate it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:exported="true" />
         <activity
             android:name=".DomainSections"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/login_Theme"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
