commit: Resolved the back button now whenever once user is logged in so after that the parent activity will be the DomainSections and after clicking the back button the app will closed here.  also blocked the landscape mode.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,28 +16,36 @@
 
         <activity
             android:name=".FashionDomain"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".UserProfile"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".Others"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".TechDomain"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".Sports"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".ChatBot"
+            android:screenOrientation="portrait"
             android:exported="true" />
         <activity
             android:name=".DomainSections"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/login_Theme"/>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:theme="@style/login_Theme">
             <intent-filter>
