commit: Added Login or sign up  option through our app and also added some visual changes. Modified the sign out button and added the user data to the firebase database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,46 +9,40 @@
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/Theme.BotShop"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BotShop">
-        <activity
-            android:name=".EditProfile"
-            android:exported="true" />
+
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SignIn"
+            android:label="Login"
+            android:theme="@style/login_Theme"
+            android:configChanges="locale|keyboardHidden|orientation"/>
         <activity
             android:name=".FashionDomain"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".UserProfile"
-            android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@style/login_Theme" />
+            android:exported="true" />
         <activity
             android:name=".Others"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".TechDomain"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".Sports"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".ChatBot"
-            android:exported="true"
-            android:screenOrientation="portrait" />
+            android:exported="true" />
         <activity
             android:name=".DomainSections"
             android:exported="true"
-            android:screenOrientation="portrait"
             android:theme="@style/login_Theme" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
             android:theme="@style/login_Theme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
