commit: Created Chat Details activity and just edited the sign in with google options to store the details on firebase.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+ 
 
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
@@ -60,6 +64,7 @@ dependencies {
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
     apply plugin: 'com.google.gms.google-services'
+
 
     implementation 'com.google.firebase:firebase-database:20.0.2'
 
