--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.Hackthon.botshop">
+    package="com.Hackthon.botshop" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,45 +9,48 @@
         android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.BotShop"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-        android:usesCleartextTraffic="true">
-        <activity android:name=".SignIn"
+        android:theme="@style/Theme.BotShop"
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".ChatDetailsActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SignIn"
+            android:configChanges="locale|keyboardHidden|orientation"
             android:label="Login"
-            android:theme="@style/NoActionBarTheme"
-            android:configChanges="locale|keyboardHidden|orientation"/>
+            android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".FashionDomain"
             android:exported="true"
             android:label="Fashion"
-            android:theme="@style/DomainTheme"/>
+            android:theme="@style/DomainTheme" />
         <activity
             android:name=".UserProfile"
             android:exported="true"
             android:label="Profile"
-            android:theme="@style/DomainTheme"/>
+            android:theme="@style/DomainTheme" />
         <activity
             android:name=".Others"
             android:exported="true"
             android:label="Others"
-            android:theme="@style/DomainTheme"/>
+            android:theme="@style/DomainTheme" />
         <activity
             android:name=".TechDomain"
             android:exported="true"
             android:label="Technology"
-            android:theme="@style/DomainTheme"/>
+            android:theme="@style/DomainTheme" />
         <activity
             android:name=".Sports"
             android:exported="true"
             android:label="Sports"
-            android:theme="@style/DomainTheme"/>
+            android:theme="@style/DomainTheme" />
         <activity
             android:name=".ChatBot"
             android:exported="true"
             android:label="Chat With Us"
-            android:theme="@style/DomainTheme"/>
+            android:theme="@style/DomainTheme" />
         <activity
             android:name=".DomainSections"
             android:exported="true"
@@ -55,7 +58,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/NoActionBarTheme">
+            android:theme="@style/NoActionBarTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -73,7 +76,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
