--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.Hackthon.botshop" >
+    package="com.Hackthon.botshop">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -12,11 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BotShop"
-        android:usesCleartextTraffic="true" >
+        android:usesCleartextTraffic="true">
+        <activity android:name=".MainActivity2"></activity>
         <activity
             android:name=".ChatDetailsActivity"
-            android:theme="@style/chatDetailsTheme"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/chatDetailsTheme" />
         <activity
             android:name=".SignIn"
             android:configChanges="locale|keyboardHidden|orientation"
@@ -65,7 +66,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/NoActionBarTheme" >
+            android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -83,7 +84,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
