commit: Changed the structure of the project now: 1. FashionDomain,SportsDomain,TechnologyDomain will be a chat room or a group chat. 2. Others section is converted into IndividualChatsDomain in which all members can talk personally.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BotShop"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity2"></activity>
         <activity
             android:name=".ChatDetailsActivity"
             android:exported="true"
@@ -24,9 +23,9 @@
             android:label="Login"
             android:theme="@style/NoActionBarTheme" />
         <activity
-            android:name=".FashionDomain"
+            android:name=".IndividualChatsDomain"
             android:exported="true"
-            android:label="Fashion"
+            android:label="Individual Chats"
             android:parentActivityName=".DomainSections"
             android:theme="@style/DomainTheme" />
         <activity
@@ -36,9 +35,9 @@
             android:parentActivityName=".DomainSections"
             android:theme="@style/DomainTheme" />
         <activity
-            android:name=".Others"
+            android:name=".FashionDomain"
             android:exported="true"
-            android:label="Others"
+            android:label="Fashion"
             android:parentActivityName=".DomainSections"
             android:theme="@style/DomainTheme" />
         <activity
