--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,12 +41,19 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
+    //watson assisstant dependency
+    implementation 'com.ibm.watson:ibm-watson:9.3.0'
+    implementation 'com.ibm.watson:text-to-speech:8.5.0'
+    implementation 'com.ibm.watson:speech-to-text:8.5.0'
+    implementation 'com.ibm.watson.developer_cloud:android-sdk:0.5.0'
 
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
