--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
     implementation 'com.google.firebase:firebase-firestore:23.0.3'
-<<<<<<< HEAD
-=======
+//<<<<<<< HEAD
+//=======
     implementation 'com.google.firebase:firebase-database:20.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
->>>>>>> f03bd37390d0a342cb919696d638f8e230bb2683
+//>>>>>>> f03bd37390d0a342cb919696d638f8e230bb2683
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -53,7 +53,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
-<<<<<<< HEAD
+//<<<<<<< HEAD
 
     //watson assisstant dependency
     implementation 'com.ibm.watson:ibm-watson:9.3.0'
@@ -61,14 +61,13 @@ dependencies {
     implementation 'com.ibm.watson:speech-to-text:8.5.0'
     implementation 'com.ibm.watson.developer_cloud:android-sdk:0.5.0'
 
-=======
-    
+//=======
+
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
->>>>>>> f03bd37390d0a342cb919696d638f8e230bb2683
+//>>>>>>> f03bd37390d0a342cb919696d638f8e230bb2683
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:28.4.0')
 
@@ -82,7 +81,7 @@ dependencies {
 
 
     implementation 'com.google.firebase:firebase-database:20.0.2'
-
+//UMq935AmlbDnGZHQTgHPrGWJc0AECCu74UELgBvBxJpz
 
 }
 
