commit: imported this project to this repo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.Hackthon.botshop">
+    package="com.Hackthon.botshop" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -13,60 +13,75 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BotShop"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".EditProfile"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme"/>
         <activity
             android:name=".ChatDetailsActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/chatDetailsTheme" />
         <activity
             android:name=".SignIn"
             android:configChanges="locale|keyboardHidden|orientation"
             android:label="Login"
+            android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".IndividualChatsDomain"
             android:exported="true"
             android:label="Individual Chats"
             android:parentActivityName=".DomainSections"
+            android:screenOrientation="portrait"
             android:theme="@style/DomainTheme" />
         <activity
             android:name=".UserProfile"
             android:exported="true"
             android:label="Profile"
             android:parentActivityName=".DomainSections"
-            android:theme="@style/DomainTheme" />
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".FashionDomain"
             android:exported="true"
             android:label="Fashion"
             android:parentActivityName=".DomainSections"
+            android:screenOrientation="portrait"
             android:theme="@style/DomainTheme" />
         <activity
             android:name=".TechDomain"
             android:exported="true"
             android:label="Technology"
             android:parentActivityName=".DomainSections"
+            android:screenOrientation="portrait"
             android:theme="@style/DomainTheme" />
         <activity
             android:name=".Sports"
             android:exported="true"
             android:label="Sports"
             android:parentActivityName=".DomainSections"
+            android:screenOrientation="portrait"
             android:theme="@style/DomainTheme" />
         <activity
             android:name=".ChatBot"
             android:exported="true"
             android:label="Chat With Us"
             android:parentActivityName=".DomainSections"
+            android:screenOrientation="portrait"
             android:theme="@style/DomainTheme" />
         <activity
             android:name=".DomainSections"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/NoActionBarTheme">
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -77,23 +92,6 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
-        <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
