--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".EditProfile"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarTheme"/>
+            android:theme="@style/editProfile"/>
         <activity
             android:name=".ChatDetailsActivity"
             android:exported="true"
@@ -45,13 +45,6 @@
             android:parentActivityName=".DomainSections"
             android:screenOrientation="portrait"
             android:theme="@style/DomainTheme" />
-        <activity
-            android:name=".UserProfile"
-            android:exported="true"
-            android:label="Profile"
-            android:parentActivityName=".DomainSections"
-            android:screenOrientation="portrait"
-            android:theme="@style/NoActionBarTheme" />
         <activity
             android:name=".FashionDomain"
             android:exported="true"
